--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,11 @@
           <img src="./img/logo_color.png" alt="Logo Alamano" class="logo" />
         </a>
         <span>
-          <a href="tel:+59897550709" target="_self" class="btn btn-link">
+          <a
+            href="tel:+59897550709"
+            target="_self"
+            class="btn btn-link fw-bold"
+          >
             <i class="fas fa-phone-alt"></i> 097 550 709
           </a>
           <a href="/login" target="_blank" class="btn btn-success">Ingresar</a>
@@ -28,11 +32,192 @@
     <!-- Portada -->
     <section class="portada">
       <div class="container">
-        <div class="row">
-          <div class="col col-5">
-            <h1>Todos los servicios en un solo lugar</h1>
+        <div class="row align-items-center">
+          <div class="col col-6">
+            <h1>
+              Todos los servicios en un solo lugar /
+              <span class="servicio">Servico 1</span>
+            </h1>
+            <p class="my-4">
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old. Richard McClintock, a Latin
+              professor at Hampden-Sydney College in Virginia,
+            </p>
+            <a href="#" class="btn btn-primary btn-lg">
+              <i class="fas fa-calculator"></i> Cotizar servicio
+            </a>
           </div>
-          <div class="col col-7">Column</div>
+          <div class="col col-6 ps-5">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Servicios -->
+    <section class="servicios">
+      <div class="container">
+        <div class="row align-items-center text-center">
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 2.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Sanitaria</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 3.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Limpieza</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 4.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Aire Acondicionado</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 5.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Mantenimiento General</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 6.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Pintura</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 7.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Electricidad</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 8.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Armado de Muebles</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 2.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Carpinteria</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 3.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Fumigación</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 4.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Carga y Descarga</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 5.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Jardinería</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 p-2">
+            <img
+              src="./img/Recurso 6.svg"
+              class="img-fluid mb-3"
+              alt="mantenimiento en general"
+            />
+            <h4>Herrería</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
         </div>
       </div>
     </section>
