--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <!-- Portada -->
-    <section class="portada">
+    <section class="portada mb-5">
       <div class="container">
         <div class="row align-items-center">
           <div class="col col-6">
@@ -38,7 +38,7 @@
               Todos los servicios en un solo lugar /
               <span class="servicio">Servico 1</span>
             </h1>
-            <p class="my-4">
+            <p class="py-4">
               Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old. Richard McClintock, a Latin
@@ -59,13 +59,13 @@
       </div>
     </section>
     <!-- Servicios -->
-    <section class="servicios">
+    <section class="servicios py-5">
       <div class="container">
-        <div class="row align-items-center text-center">
-          <div class="col col-4 p-2">
+        <div class="row text-center">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 2.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Sanitaria</h4>
@@ -75,10 +75,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 3.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Limpieza</h4>
@@ -88,10 +88,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 4.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Aire Acondicionado</h4>
@@ -101,10 +101,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 5.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Mantenimiento General</h4>
@@ -114,10 +114,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 6.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Pintura</h4>
@@ -127,10 +127,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 7.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Electricidad</h4>
@@ -140,10 +140,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 8.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Armado de Muebles</h4>
@@ -153,10 +153,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 2.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Carpinteria</h4>
@@ -166,10 +166,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 3.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Fumigación</h4>
@@ -179,10 +179,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 4.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Carga y Descarga</h4>
@@ -192,10 +192,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 5.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Jardinería</h4>
@@ -205,10 +205,10 @@
               making it over 2000 years old.
             </p>
           </div>
-          <div class="col col-4 p-2">
+          <div class="col col-4 py-3">
             <img
               src="./img/Recurso 6.svg"
-              class="img-fluid mb-3"
+              class="img-fluid"
               alt="mantenimiento en general"
             />
             <h4>Herrería</h4>
@@ -217,6 +217,212 @@
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old.
             </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Como funciona -->
+    <section class="como_funciona py-5">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col col-12">
+            <h1 class="mb-5">¿Como funciona?</h1>
+          </div>
+          <div class="col col-6 time_line">
+            <div class="px-4 py-3">
+              <img
+                src="./img/portada_4.svg"
+                class="img-fluid"
+                alt="mantenimiento en general"
+              />
+              <h5>Damos de alta a tu empresa en nuestra plataforma</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old.
+              </p>
+            </div>
+            <div class="px-4 py-3">
+              <img
+                src="./img/portada_4.svg"
+                class="img-fluid"
+                alt="mantenimiento en general"
+              />
+              <h5>Alamano coordina con un técnico calificado para la tarea</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old.
+              </p>
+            </div>
+            <div class="px-4 py-3">
+              <img
+                src="./img/portada_4.svg"
+                class="img-fluid"
+                alt="mantenimiento en general"
+              />
+              <h5>Técnico asiste para realizar el servicio solicitado</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old.
+              </p>
+            </div>
+            <div class="px-4 py-3">
+              <img
+                src="./img/portada_4.svg"
+                class="img-fluid"
+                alt="mantenimiento en general"
+              />
+              <h5>Accedes a la plataforma para ver detalle del servicio</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old.
+              </p>
+            </div>
+            <div class="px-4 py-3">
+              <img
+                src="./img/portada_4.svg"
+                class="img-fluid"
+                alt="mantenimiento en general"
+              />
+              <h5>Listo tareas resueltas!</h5>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Que ofrecemos -->
+    <section class="que_ofrecemos py-5">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col col-12">
+            <h1 class="mb-5">¿Qué ofrece alamano Empresas?</h1>
+          </div>
+          <div class="col col-4 py-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h4>Mantenimiento</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 py-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h4>Centralización</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 py-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h4>Control</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 py-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h4>Estandarización</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col col-4 py-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h4>Fexibilidad</h4>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Plataforma -->
+    <section class="plataforma py-5">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col col-12">
+            <h1 class="mb-5">Nuestra plataforma</h1>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col col-5">
+            <h4 class="">Panel integrar para empresas</h4>
+            <ul class="list-group list-group-flush text-start fw-ligh">
+              <li class="list-group-item">
+                <i class="fas fa-calendar-plus"></i> Solicitá los servicios que
+                necesites con solo tres clicks.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-receipt"></i> Accedé a tu estado de cuenta y
+                descargá tus facturas.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-calendar-alt"></i> Monitoreá tus horas
+                disponibles de servicios.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-list-alt"></i> Controlá los servicios
+                contratados.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-file-alt"></i> Visualizá tus gastos mensuales y
+                obtené reportes.
+              </li>
+            </ul>
+          </div>
+          <div class="col col-7 text-center">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Planes -->
+    <section class="planes py-5">
+      <div class="container">
+        <div class="row justify-content-center text-center">
+          <div class="col col-12">
+            <h1 class="mb-5">Planes mensuales de mantenimiento</h1>
           </div>
         </div>
       </div>
