--- a/public/index.html
+++ b/public/index.html
@@ -223,11 +223,9 @@
     </section>
     <!-- Como funciona -->
     <section class="como_funciona py-5">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col col-12">
-            <h1 class="mb-5">¿Como funciona?</h1>
-          </div>
+      <div class="container text-center">
+        <h1 class="mb-5">¿Como funciona?</h1>
+        <div class="row justify-content-center">
           <div class="col col-6 time_line">
             <div class="px-4 py-3">
               <img
@@ -300,11 +298,9 @@
     </section>
     <!-- Que ofrecemos -->
     <section class="que_ofrecemos py-5">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col col-12">
-            <h1 class="mb-5">¿Qué ofrece alamano Empresas?</h1>
-          </div>
+      <div class="container text-center">
+        <h1 class="mb-5">¿Qué ofrece alamano Empresas?</h1>
+        <div class="row justify-content-center">
           <div class="col col-4 py-3">
             <img
               src="./img/portada_4.svg"
@@ -375,12 +371,9 @@
     </section>
     <!-- Plataforma -->
     <section class="plataforma py-5">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col col-12">
-            <h1 class="mb-5">Nuestra plataforma</h1>
-          </div>
-        </div>
+      <div class="container text-center">
+        <h1 class="mb-5">Nuestra plataforma</h1>
+        <div class="row justify-content-center text-center"></div>
         <div class="row align-items-center">
           <div class="col col-5">
             <h4 class="">Panel integrar para empresas</h4>
@@ -419,10 +412,205 @@
     </section>
     <!-- Planes -->
     <section class="planes py-5">
-      <div class="container">
-        <div class="row justify-content-center text-center">
-          <div class="col col-12">
-            <h1 class="mb-5">Planes mensuales de mantenimiento</h1>
+      <div class="container text-center">
+        <h1 class="mb-5">Planes de mantenimiento</h1>
+        <div class="row justify-content-evenly">
+          <div class="col col-3 card py-5">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <p class="h4 pt-3">Oficina</p>
+            <p class="h2">$ 4.250 + IVA</p>
+            <p class="h6">Paquete de 15 hs/mes</p>
+            <ul class="list-group list-group-flush fw-ligh py-3">
+              <li class="list-group-item">
+                Acceso a todos los servicios de mantenimiento.
+              </li>
+              <li class="list-group-item">
+                Servicios por fuera del paquete con un 15 % OFF.
+              </li>
+            </ul>
+            <a href="#" class="btn btn-primary btn-lg"> Cotizar </a>
+          </div>
+
+          <div class="col col-3 card py-5">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <p class="h4 pt-3">Depósito</p>
+            <p class="h2">$ 11.700 + IVA</p>
+            <p class="h6">Paquete de 15 hs/mes</p>
+            <ul class="list-group list-group-flush fw-ligh py-3">
+              <li class="list-group-item">
+                Acceso a todos los servicios de mantenimiento.
+              </li>
+              <li class="list-group-item">
+                Servicios por fuera del paquete con un 15 % OFF.
+              </li>
+            </ul>
+            <a href="#" class="btn btn-secondary btn-lg"> Cotizar </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Numeros -->
+    <section class="planes py-5">
+      <div class="container text-center">
+        <h1 class="mb-5">Lideres en la gestión de mantenimiento</h1>
+        <div class="row justify-content-evenly">
+          <div class="col col-3 py-3">
+            <p class="h1 text-secondary">+2.300</p>
+            <p class="h6">Hs ejecutadas</p>
+          </div>
+          <div class="col col-3 py-3">
+            <p class="h1 text-secondary">+2.300</p>
+            <p class="h6">Empresas que confian</p>
+          </div>
+          <div class="col col-3 py-3">
+            <p class="h1 text-secondary">+2.300</p>
+            <p class="h6">Técnicos calificados</p>
+          </div>
+        </div>
+        <div class="row justify-content-evenly text-center">
+          <div class="col col-12 py-3">
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide"
+              data-bs-ride="carousel"
+              data-bs-pause="false"
+            >
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <!-- Grupo 1 Clientes-->
+                  <div class="row justify-content-evenly text-center">
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <!-- Grupo 2 Clientes-->
+                  <div class="row justify-content-evenly text-center">
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                    <div class="col col-2 px-3">
+                      <img
+                        src="./img/portada_4.svg"
+                        class="img-fluid"
+                        alt="mantenimiento en general"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Contacto -->
+    <section class="planes py-5">
+      <div class="container text-center">
+        <h1 class="mb-5">Contacte con nosotros</h1>
+        <div class="row justify-content-center px-2 py-2">
+          <div class="col col-3">
+            <input type="text" class="form-control" placeholder="Empresa" />
+          </div>
+          <div class="col col-3">
+            <input type="text" class="form-control" placeholder="Nombre" />
+          </div>
+        </div>
+        <div class="row justify-content-center px-2 py-2">
+          <div class="col col-3">
+            <input type="email" class="form-control" placeholder="Email" />
+          </div>
+          <div class="col col-3">
+            <input type="tel" class="form-control" placeholder="Teléfono" />
+          </div>
+        </div>
+        <div class="row justify-content-center px-2 py-2">
+          <div class="col col-6">
+            <textarea
+              class="form-control"
+              placeholder="Mensaje de consulta"
+              rows="3"
+            ></textarea>
           </div>
         </div>
       </div>
