--- a/public/index.html
+++ b/public/index.html
@@ -373,9 +373,8 @@
     <section class="plataforma py-5">
       <div class="container text-center">
         <h1 class="mb-5">Nuestra plataforma</h1>
-        <div class="row justify-content-center text-center"></div>
         <div class="row align-items-center">
-          <div class="col col-5">
+          <div class="col col-6">
             <h4 class="">Panel integrar para empresas</h4>
             <ul class="list-group list-group-flush text-start fw-ligh">
               <li class="list-group-item">
@@ -400,7 +399,7 @@
               </li>
             </ul>
           </div>
-          <div class="col col-7 text-center">
+          <div class="col col-6 text-center">
             <img
               src="./img/portada_4.svg"
               class="img-fluid"
@@ -458,7 +457,7 @@
       </div>
     </section>
     <!-- Numeros -->
-    <section class="planes py-5">
+    <section class="numeros py-5">
       <div class="container text-center">
         <h1 class="mb-5">Lideres en la gestión de mantenimiento</h1>
         <div class="row justify-content-evenly">
@@ -585,34 +584,141 @@
       </div>
     </section>
     <!-- Contacto -->
-    <section class="planes py-5">
+    <section class="contacto py-5">
+      <form>
+        <div class="container text-center">
+          <h1 class="mb-5">Contacte con nosotros</h1>
+          <div class="row justify-content-center px-2 py-2">
+            <div class="col col-3">
+              <input type="text" class="form-control" placeholder="Empresa" />
+            </div>
+            <div class="col col-3">
+              <input type="text" class="form-control" placeholder="Nombre" />
+            </div>
+          </div>
+          <div class="row justify-content-center px-2 py-2">
+            <div class="col col-3">
+              <input type="email" class="form-control" placeholder="Email" />
+            </div>
+            <div class="col col-3">
+              <input type="tel" class="form-control" placeholder="Teléfono" />
+            </div>
+          </div>
+          <div class="row justify-content-center px-2 py-2">
+            <div class="col col-6">
+              <textarea
+                class="form-control"
+                placeholder="Mensaje de consulta"
+                rows="3"
+              ></textarea>
+            </div>
+          </div>
+          <div class="row justify-content-center px-2 py-2">
+            <div class="col col-6">
+              <button type="button" class="btn btn-primary">Primary</button>
+            </div>
+          </div>
+        </div>
+      </form>
+    </section>
+    <!-- Sumate -->
+    <section class="sumate py-5">
       <div class="container text-center">
-        <h1 class="mb-5">Contacte con nosotros</h1>
-        <div class="row justify-content-center px-2 py-2">
-          <div class="col col-3">
-            <input type="text" class="form-control" placeholder="Empresa" />
-          </div>
-          <div class="col col-3">
-            <input type="text" class="form-control" placeholder="Nombre" />
-          </div>
-        </div>
-        <div class="row justify-content-center px-2 py-2">
-          <div class="col col-3">
-            <input type="email" class="form-control" placeholder="Email" />
-          </div>
-          <div class="col col-3">
-            <input type="tel" class="form-control" placeholder="Teléfono" />
-          </div>
-        </div>
-        <div class="row justify-content-center px-2 py-2">
+        <h1 class="mb-5">¿Sos un profecional?</h1>
+        <div class="row align-items-center">
           <div class="col col-6">
-            <textarea
-              class="form-control"
-              placeholder="Mensaje de consulta"
-              rows="3"
-            ></textarea>
+            <h4 class="">Sumate a nuestra red de profesionales</h4>
+            <ul class="list-group list-group-flush text-start fw-ligh">
+              <li class="list-group-item">
+                <i class="fas fa-check"></i> Accedé a una amplia cartera de
+                clientes en Montevideo y Ciudad de la Costa.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-check"></i> Vos manejás tu agenda, y elegís qué
+                servicios querés hacer.
+              </li>
+              <li class="list-group-item">
+                <i class="fas fa-check"></i> Hacé crecer tu negocio y conseguí
+                nuevos clientes cerca de tu casa.
+              </li>
+            </ul>
+
+            <a href="/login" target="_blank" class="btn btn-secondary mt-4">
+              Sumate
+            </a>
+          </div>
+          <div class="col col-6 text-center">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <section class="footer pt-5">
+      <div class="container">
+        <div class="row justify-content-evenly">
+          <div class="col col-2 text-center">
+            <a href="">
+              <img
+                src="./img/logo_color.png"
+                alt="Logo Alamano"
+                class="img-fluid mb-4"
+              />
+            </a>
+            <a href="#"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
+            <a href="#"><i class="fab fa-twitter fa-lg me-3"></i></a>
+            <a href="#"><i class="fab fa-instagram fa-lg"></i></a>
+          </div>
+          <div class="col col-3 fw-bold">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <a href="mailto:info@alamano.com.uy" target="_blank">
+                  <i class="fas fa-envelope"></i> info@alamano.com.uy
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="tel:Cel:+59897550709" target="_blank">
+                  <i class="fas fa-phone-square-alt"></i> (+598) 97 550 709
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fas fa-map-marked-alt"></i> Lunes a Viernes de 9
+                  18hs
+                </a>
+              </li>
+              <li class="list-group-item">
+                <a href="#">
+                  <i class="fas fa-map-marked-alt"></i> Sábados de 9 a 14hs.
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="col col-2">
+            <img
+              src="./img/1606500471940.webp"
+              alt="ORT"
+              class="img-fluid mb-3"
+            />
+            <img
+              src="./img/Logo-ANDE-sin-frase.png"
+              alt="ANDE"
+              class="img-fluid mb-3"
+            />
+            <img
+              src="./img/LOGOTIPO-PROYECTO-ANII_RGB.png"
+              alt="ANII"
+              class="img-fluid mb-3"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="footer-cr mt-3 py-3 px-3 text-center">
+        © 2020 alamano.com.uy. Todos los derechos reservados.
       </div>
     </section>
 
@@ -629,6 +735,10 @@
     <script
       defer
       src="../node_modules/@fortawesome/fontawesome-free/js/solid.js"
+    ></script>
+    <script
+      defer
+      src="../node_modules/@fortawesome/fontawesome-free/js/brands.js"
     ></script>
     <script
       defer
