--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
               making it over 2000 years old. Richard McClintock, a Latin
               professor at Hampden-Sydney College in Virginia,
             </p>
-            <a href="#" class="btn btn-primary btn-lg">
+            <a href="#" class="btn btn-primary btn-lg rounded-pill">
               <i class="fas fa-calculator"></i> Cotizar servicio
             </a>
           </div>
@@ -64,244 +64,177 @@
     </section>
     <!-- Servicios -->
     <section class="servicios py-5">
-      <div class="container text-center">
-        <h1 class="mb-5">¿Nuestros servicios?</h1>
+      <div class="container container-fluid text-center">
+        <h2 class="mb-5">Nuestros servicios</h2>
         <div class="row">
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 2.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Sanitaria</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Sanitaria</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 3.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Limpieza</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Limpieza</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Aire Acondicionado</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Aire Acondicionado</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 5.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Mantenimiento General</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Mantenimiento General</h6>
           </div>
-        </div>
-        <div class="row servi" id="mas_servi">
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 6.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Pintura</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Pintura</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 7.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Electricidad</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Electricidad</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 8.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Armado de Muebles</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Armado de Muebles</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 2.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Carpinteria</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Carpinteria</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 3.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Fumigación</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Fumigación</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 4.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Carga y Descarga</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Carga y Descarga</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 5.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Jardinería</h4>
-            <p>
-              Contrary to popular belief, Lorem Ipsum is not simply random text.
-              It has roots in a piece of classical Latin literature from 45 BC,
-              making it over 2000 years old.
-            </p>
+            <h6>Jardinería</h6>
           </div>
-          <div class="col col-3 py-3">
+          <div class="col col-2 py-3">
             <img
               src="./img/Recurso 6.svg"
               class="img-fluid"
               alt="mantenimiento en general"
             />
-            <h4>Herrería</h4>
+            <h6>Herrería</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Como funciona -->
+    <section class="como_funciona py-5">
+      <div class="container text-center">
+        <h2 class="mb-5">¿Como funciona?</h2>
+        <div class="row justify-content-center">
+          <div class="col bg-light p-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h6>Damos de alta a tu empresa en nuestra plataforma</h6>
             <p>
               Contrary to popular belief, Lorem Ipsum is not simply random text.
               It has roots in a piece of classical Latin literature from 45 BC,
               making it over 2000 years old.
             </p>
           </div>
-        </div>
-        <button type="button" class="btn btn-primary mt-3" id="btn_servi">
-          Ver todos
-        </button>
-      </div>
-    </section>
-    <!-- Como funciona -->
-    <section class="como_funciona py-5">
-      <div class="container text-center">
-        <h1 class="mb-5">¿Como funciona?</h1>
-        <div class="row justify-content-center">
-          <div class="col col-6 time_line">
-            <div class="px-4 py-3">
-              <img
-                src="./img/portada_4.svg"
-                class="img-fluid"
-                alt="mantenimiento en general"
-              />
-              <h5>Damos de alta a tu empresa en nuestra plataforma</h5>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old.
-              </p>
-            </div>
-            <div class="px-4 py-3">
-              <img
-                src="./img/portada_4.svg"
-                class="img-fluid"
-                alt="mantenimiento en general"
-              />
-              <h5>Alamano coordina con un técnico calificado para la tarea</h5>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old.
-              </p>
-            </div>
-            <div class="px-4 py-3">
-              <img
-                src="./img/portada_4.svg"
-                class="img-fluid"
-                alt="mantenimiento en general"
-              />
-              <h5>Técnico asiste para realizar el servicio solicitado</h5>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old.
-              </p>
-            </div>
-            <div class="px-4 py-3">
-              <img
-                src="./img/portada_4.svg"
-                class="img-fluid"
-                alt="mantenimiento en general"
-              />
-              <h5>Accedes a la plataforma para ver detalle del servicio</h5>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old.
-              </p>
-            </div>
-            <div class="px-4 py-3">
-              <img
-                src="./img/portada_4.svg"
-                class="img-fluid"
-                alt="mantenimiento en general"
-              />
-              <h5>Listo tareas resueltas!</h5>
-              <p>
-                Contrary to popular belief, Lorem Ipsum is not simply random
-                text. It has roots in a piece of classical Latin literature from
-                45 BC, making it over 2000 years old.
-              </p>
-            </div>
+          <div class="col bg-light p-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h6>Alamano coordina con un técnico calificado</h6>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col bg-light p-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h6>Técnico asiste para realizar el servicio solicitado</h6>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col bg-light p-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h6>Accedes a la plataforma para ver detalle del servicio</h6>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
+          </div>
+          <div class="col bg-light p-3">
+            <img
+              src="./img/portada_4.svg"
+              class="img-fluid"
+              alt="mantenimiento en general"
+            />
+            <h6>Listo tareas resueltas!</h6>
+            <p>
+              Contrary to popular belief, Lorem Ipsum is not simply random text.
+              It has roots in a piece of classical Latin literature from 45 BC,
+              making it over 2000 years old.
+            </p>
           </div>
         </div>
       </div>
@@ -755,20 +688,6 @@
       src="../node_modules/@fortawesome/fontawesome-free/js/fontawesome.js"
     ></script>
     <!-- JS Custon -->
-    <script>
-      const masServi = document.querySelector('#mas_servi')
-      const btnServi = document.querySelector('#btn_servi')
-      btnServi.onclick = () => {
-        if (masServi.classList.contains('abierto')) {
-          masServi.classList.add('cerrado')
-          masServi.classList.remove('abierto')
-          btnServi.innerHTML = 'Ver todos'
-        } else {
-          masServi.classList.add('abierto')
-          masServi.classList.remove('cerrado')
-          btnServi.innerHTML = 'Cerrar'
-        }
-      }
-    </script>
+    <script></script>
   </body>
 </html>
